.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Include the `overrides.zcml` from `Products.PlacelessTranslationService` to
  actually make PTS' language negotiator available to the zope.i18n machinery.
  [hannosch]

- Moved ATCT specific exportimport code into the ATCT package itself.
  [hannosch]

- Made sure the plone.indexer registration works by introducing a more
  specific IPloneCatalogTool marker interface and registering the indexable
  object wrapper for this.
  [optilude]

- Expose the `site management folder` aka `++etc++site` or `_components` as a
  tab in the ZMI including the full OFS manage_main functionality.
  [hannosch]

- Added a restricted version of the opaqueItems method for CMFCatalogAware.
  This takes the idea of experimental.opaquespeedup one step further.
  [hannosch]

- Removed the `ResourceRegistries` skin layer. It only contained test code.
  [hannosch]

- Make use of the new IContainer API of object managers and replace objectIds
  and objectValues calls.
  [hannosch]

- Finally removed the interfacePatch for the IContainer interface of
  OFS.ObjectManager after it has been merged upstream.
  [hannosch]

- Removed CMFTopic from our dependency list, it turns out that we aren't
  actually using any of it.
  [hannosch]

- Deprecate our own IOrderedContainer interface in favor of the original one
  from OFS.
  [hannosch]

- Avoid dependency on the zope.app.zapi package.
  [hannosch]

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- No longer depend on the PageTemplates.GlobalTranslationService but use
  zope.i18n directly.
  [hannosch]

- Merged in more performance optimizations from experimental.contentcreation.
  We don't restrict the permissions for the temporary folder anymore, but