@@ -8,21 +8,13 @@
      type="portlets.Navigation"
      name="navigation"
      />
- 
+
  <assignment
      manager="plone.leftcolumn"
      category="context"
      key="/"
      type="portlets.Login"
      name="login"
-     />
-     
-  <assignment
-     manager="plone.rightcolumn"
-     category="context"
-     key="/"
-     type="portlets.Review"
-     name="review"
      />
 
  <assignment
@@ -32,21 +24,13 @@
      type="portlets.News"
      name="news"
      />
-     
+
  <assignment
      manager="plone.rightcolumn"
      category="context"
      key="/"
      type="portlets.Events"
      name="events"
-     />
-     
- <assignment
-     manager="plone.rightcolumn"
-     category="context"
-     key="/"
-     type="portlets.Calendar"
-     name="calendar"
      />
 
  <!-- Clear the right portlet column in the /Members folder -->
@@ -63,7 +47,7 @@
      category="group"
      status="block"
      />
-     
+
  <blacklist
      manager="plone.rightcolumn"
      location="/Members"
